samples/_failures_safe/1761284462_cbd0f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_533e9ab8.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_533e9ab8.c:165:5: error: expected identifier at end of input
  165 |     q->
      |     ^
./samples/SAFE/__tmp_533e9ab8.c:165:5: error: expected declaration or statement at end of input
